Brief Interlude - Coupling and Abstractions

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ dist: xenial
 language: python
 python: 3.8
 
+install:
+- pip3 install sqlalchemy
+
 script:
 - make test
-
-branches:
-    except:
-    - /.*_exercise$/
