--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,5 @@ ignore_missing_imports = False
 mypy_path= ./src
 check_untyped_defs= True
 
-[mypy-pytest.*, mypy-sqlalchemy.*]
+[mypy-pytest.*, sqlalchemy.*]
 ignore_missing_imports = True
