Redis e2e Tests, consumer entrypoint and publisher adapter. Docker-compose, Dockerfile configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,46 @@
 version: "3"
 services:
 
-    app:
+    redis_pubsub:
         build:
             context: .
             dockerfile: Dockerfile
+        image: allocation-image
         depends_on:
             - mysql
+            - redis
         environment:
             - MYSQL_HOST=mysql
             - MYSQL_PASSWORD=abc123
-            - PYTHONDONTWRITEBYTECODE=1
-            - API_HOST=app
+            - REDIS_HOST=redis
+            - PYTHONWRITEBYTECODE=1
         volumes:
             - ./src:/src
             - ./tests:/tests
+        entrypoint:
+            - python
+            - /src/allocation/entrypoints/redis_eventconsumer.py
+
+    api:
+        image: allocation-image
+        depends_on:
+            - redis_pubsub
+        environment:
+            - MYSQL_HOST=mysql
+            - MYSQL_PASSWORD=abc123
+            - REDIS_HOST=redis
+            - FLASK_APP=allocation/entrypoints/flask_app.py
+            - FLASK_DEBUG=1
+            - PYTHONBUFFERED=1
+            - API_HOST=api
+        volumes:
+            - ./src:/src
+            - ./tests:/tests
+        entrypoint:
+            - flask
+            - run
+            - --host=0.0.0.0
+            - --port=80
         ports:
             - "5005:80"
 
@@ -25,3 +51,8 @@ services:
             - MYSQL_DATABASE=allocation
         ports:
             - "33060:3306"
+
+    redis:
+        image: redis:alpine
+        ports:
+            - "63791:6379"
